--- a/scss/_galeriasgrid.scss
+++ b/scss/_galeriasgrid.scss
@@ -75,6 +75,7 @@
 .alquileres1 {
     margin-top: 0;
     .galeria-alquileres {
+            z-index: 0;
             display: grid;
             grid-auto-flow: dense;
             grid-template-columns: repeat(auto-fill, minmax(min(25rem), 1fr));
