--- a/css/estilos.css
+++ b/css/estilos.css
@@ -137,7 +137,7 @@ header {
 .gallery-container {
   display: grid;
   grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   grid-auto-rows: 22rem;
   padding: 2px;
   gap: 5px; }
@@ -168,7 +168,7 @@ header {
 .galeria-compras {
   display: grid;
   grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   grid-auto-rows: 22rem;
   padding: 2px;
   gap: 5px; }
@@ -202,7 +202,7 @@ header {
     z-index: 0;
     display: grid;
     grid-auto-flow: dense;
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-auto-rows: 22rem;
     padding: 2px;
     gap: 5px; }
@@ -500,7 +500,7 @@ header {
 /* comprar */
 .cartas {
   display: flex;
-  margin: 10px;
+  margin: 0;
   margin-top: 0;
   padding: 10px;
   font-family: 'Comfortaa', cursive; }
