--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -1,6 +1,6 @@
 .cartas{
     display:flex;
-    margin:10px;
+    margin:0;
     margin-top: 0;
     padding:10px;
     font-family: 'Comfortaa', cursive;
