--- a/scss/_galeriasgrid.scss
+++ b/scss/_galeriasgrid.scss
@@ -26,7 +26,7 @@
             position: absolute;
             bottom: 0;
             color: white;
-            background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 1));
+            background: $bg_nav;
             width: 100%;
             text-align: center;
         }
@@ -63,7 +63,7 @@
             position: sticky;
             bottom: 0;
             color: white;
-            background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 1));
+            background: $bg_nav;
             width: 100%;
             text-align: center;
         }
@@ -102,7 +102,7 @@
                     position: sticky;
                     bottom: 0;
                     color: white;
-                    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 1));
+                    background: $bg_nav;
                     width: 100%;
                     text-align: center;
                 }
