--- a/css/estilos.css
+++ b/css/estilos.css
@@ -159,7 +159,7 @@ header {
       position: absolute;
       bottom: 0;
       color: white;
-      background: linear-gradient(rgba(255, 255, 255, 0.5), black);
+      background: #95d5b2;
       width: 100%;
       text-align: center; }
 
@@ -190,7 +190,7 @@ header {
       position: sticky;
       bottom: 0;
       color: white;
-      background: linear-gradient(rgba(255, 255, 255, 0.5), black);
+      background: #95d5b2;
       width: 100%;
       text-align: center; }
 
@@ -224,7 +224,7 @@ header {
         position: sticky;
         bottom: 0;
         color: white;
-        background: linear-gradient(rgba(255, 255, 255, 0.5), black);
+        background: #95d5b2;
         width: 100%;
         text-align: center; }
 
