--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,9 @@
-$bg_nav:#95d5b2;
-$bg_body:#caffbf;
+$bg_nav:#023047;
+$bg_body:#bde0fe;
 $bg_footer:#40916c;
 $bg_cards:#50ffb1;
 $bg_rosa:#ffc9d6;
+$bg_titulo:#59a5d8;
 
 
 
