--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,190 +1,82 @@
-.footer {
-    background-color: #40916c;
-    background-size: cover;
-    font-family: 'Comfortaa', cursive;
-}
-.first {
-    margin-top: 40px;
-    margin-bottom: 50px;
-    color: rgb(206, 206, 206);
-    font-family: 'Poppins', sans-serif;
-}
-
-.first h4 {
-    font-size: 20px;
-    letter-spacing: 3px;
-    position: relative;
-    margin-bottom: 20px;
-    font-size: 1.6em;
-    color: #fff;
-    padding-bottom: 0.5em;
-}
-
-.first h4::after {
-    content: '';
-    background: black;
-    width: 20%;
-    height: 2px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.first p {
-    font-size: 14px;
-    padding: 10px;
-}
-
-.second {
-    margin-top: 40px;
-    margin-bottom: 50px;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-}
-
-.second2 {
-    margin-top: 40px;
-    margin-bottom: 50px;
-    color: rgb(206, 206, 206);
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-}
-
-.second h4 {
-    font-size: 20px;
-    letter-spacing: 3px;
-    position: relative;
-    margin-bottom: 20px;
-    font-size: 1.6em;
-    color: #fff;
-    padding-bottom: 0.5em;
-}
-
-.second h4::after {
-    content: '';
-    background: black;
-    width: 20%;
-    height: 2px;
-    position: absolute;
-    bottom: 0;
-    left: 40%;
-}
-
-
-.second li {
-    list-style: none;
-    padding-bottom: 30px;
-}
-
-.second a,
-.second2 a {
-    color: white;
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 14px;
-    transition: 0.2s;
-}
-
-.second a:hover,
-.second2 a:hover {
-    color: #caffbf;
-    transition: 0.2s;
-    text-shadow: 1px 1px 20px rgba(0, 0, 0, 1);
-    text-decoration: none
-}
-
-.third {
-    margin-top: 40px;
-    margin-bottom: 50px;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: right;
-}
-
-
-.third h4 {
-    font-size: 20px;
-    letter-spacing: 3px;
-    position: relative;
-    margin-bottom: 20px;
-    font-size: 1.6em;
-    color: #fff;
-    padding-bottom: 0.5em;
-}
-
-
-.third h4::after {
-    content: '';
-    background: black;
-    width: 20%;
-    height: 2px;
-    position: absolute;
-    bottom: 0;
-    left: 80%;
-}
-
-
-
-.third li {
-    list-style: none;
-    padding-bottom: 15px;
-}
-
-
-.third a {
-    color: rgb(206, 206, 206);
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 14px;
-    transition: 0.2s;
-}
-
-
-.third a:hover {
-    color: #fff;
-    transition: 0.2s;
-    text-shadow: 1px 1px 20px rgba(0, 0, 0, 1);
-}
-
-
-@media screen and (max-width:1000px) {
-    .first {
-        text-align: center;
-    }
-
-    .first h4::after {
-        left: 40%;
-    }
-}
-
-@media screen and (max-width:1000px) {
-    .third {
-        text-align: center;
-    }
-
-    .third h4::after {
-        left: 40%;
-    }
-}
-
-.margin {
-    margin-left: 20px;
-}
-
-.line {
-    height: 2px;
-    background-color: rgb(206, 206, 206);
+footer {
     width: 100%;
-}
+    padding: 50px 0px;
+    background-size: cover;
+    background-color: #b9e0f1;
+    -webkit-mask-image: url("../Images/background-footer.svg");
+    mask-image: url("../Images/background-footer.svg");
+    -webkit-mask-size: cover;
+    mask-size: cover;
 
-.container h1 {
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    .container-footer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        max-width: 1200px;
+        margin: auto;
+        margin-top: 100px;
+
+        .box-footer {
+            display: flex;
+            flex-direction: column;
+            padding: 40px;
+            }
+            .box-copyright{
+                max-width: 1200px;
+                margin:auto;
+                text-align: center;
+                padding: 0px 40px;
+                p{
+                    margin-top: 20px ;
+                    color:black;
+                }
+                hr{
+                    border: none;
+                    height: 1px;
+                    color: black    ;
+                }
+            }
+            a{
+                margin-top: 10px;
+                color: black;
+                font-weight: 600;
+                text-decoration: none;
+                &:hover{
+                    opacity: 0.9;
+                }
+                .fab{
+                    font-size: 20px;
+                }
+            }
+
+            h2 {
+                margin-bottom: 30px;
+                color:black;
+                font-weight: 700;
+            }
+
+            .terminos {
+                max-width: 350px;
+                margin-top: 20px;
+                font-weight: 500;
+                color: black;
+                font-size: 12px;
+                p{
+                    text-align: center;
+                    justify-content: center;
+                }
+            }
+
+            .logo {
+                display: flex;
+                justify-content: center;
+                img {
+                    width: 200px;
+                    align-content: center;
+                    
+                }
+        }
+    }
 }
 
 /* fin footer */
-/* comprar */
