--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -71,6 +71,7 @@ footer {
                 display: flex;
                 justify-content: center;
                 img {
+                    padding-top: 20px;
                     width: 200px;
                     align-content: center;
                     
