--- a/css/estilos.css
+++ b/css/estilos.css
@@ -227,7 +227,7 @@ header {
     .contact-parent .contact-child .inside-contact h3 {
       text-align: center;
       font-size: 16px;
-      color: #0085e2; }
+      color: #023047; }
   .contact-parent .child1 {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
     background-size: cover;
@@ -260,7 +260,7 @@ header {
     transition: 0.2s; }
 
 .inside-contact input[type=submit] {
-  background-color: #000;
+  background-color: #023047;
   color: #fff;
   transition: 0.2s;
   border: 2px solid #000;
@@ -269,9 +269,6 @@ header {
     background-color: #fff;
     color: #000;
     transition: 0.2s; }
-
-.formulario {
-  margin: 30px; }
 
 /* fin contacto */
 /* conocenos */
