--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -18,7 +18,7 @@
         .inside-contact h3{
             text-align:center;
             font-size:16px;
-            color:#0085e2;
+            color:$bg_nav;
         }
     }
     .child1{
@@ -60,7 +60,7 @@
 }
 
 .inside-contact input[type=submit]{
-    background-color:#000;
+    background-color:$bg_nav;
     color:#fff;
     transition:0.2s;
     border:2px solid #000;
@@ -70,11 +70,6 @@
         color:#000;
         transition:0.2s;
     }
-}
-
-
-.formulario {
-    margin: 30px;
 }
 
 /* fin contacto */
