--- a/scss/_conocenos.scss
+++ b/scss/_conocenos.scss
@@ -1,29 +1,30 @@
 /* conocenos */
-@mixin cuadrados{
-    background-color: #fee2f8;
-        background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
-        line-height: 1.6;
-        border: black;
-        border-style: solid;
-        width: 100%;
-        height: 40%;
-        display: inline;
-        margin: 15px;
+@mixin cuadrados {
+    background-color: #6a93cb;
+    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
+    line-height: 1.6;
+    border: black;
+    border-style: solid;
+    width: 100%;
+    height: 40%;
+    display: inline;
+    margin: 15px;
 }
+
 .cuadrados {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    .formato-p{
+
+    .formato-p {
         font-family: 'Comfortaa', cursive;
         font-size: 20px;
     }
+
     .cuadrado1 {
         @include cuadrados;
         border-radius: 50px 100px;
-        
-    
     }
     .cuadrado3 {
         display: inline-block;
@@ -32,11 +33,15 @@
         padding: 10px;
         margin: 10px;
         text-align: center;
-        background-color: #cdedfd;
-        background-image: linear-gradient(319deg, #cdedfd 0%, #ffec82 37%, #ffcfd2 100%);
+        background-color: #6a93cb;
+        background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
         font-family: 'Comfortaa', cursive;
+        h2{
+            font-family: 'Comfortaa', cursive;
+            font-size: 20px;
+        }
     }
-    
+
 }
 
 /* fin conocenos */
