--- a/scss/_galeriasgrid.scss
+++ b/scss/_galeriasgrid.scss
@@ -6,6 +6,7 @@
     grid-auto-rows: 22rem;
     padding: 2px;
     gap: 5px;
+    margin: 5px;
     .gallery-item {
         position: relative;
         overflow: hidden;
@@ -43,6 +44,7 @@
     grid-auto-rows: 22rem;
     padding: 2px;
     gap: 5px;
+    margin: 5px;
     .gallery-item {
         position: inherit;
         overflow: hidden;
@@ -82,6 +84,7 @@
             grid-auto-rows: 22rem;
             padding: 2px;
             gap: 5px;
+            margin: 5px;
             .gallery-item {
                 position: inherit;
                 overflow: hidden;
