--- a/scss/_propiedad.scss
+++ b/scss/_propiedad.scss
@@ -1,3 +1,4 @@
+/* propiedad */
 @mixin cuadrados {
     background-color: #fee2f8;
     background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
