--- a/css/estilos.css
+++ b/css/estilos.css
@@ -94,6 +94,7 @@ header {
         text-decoration: none;
         z-index: 99; }
 
+/* fin navegacion */
 /* Carrousel */
 .carousel-item {
   display: flex;
@@ -210,7 +211,8 @@ header {
 /* contacto */
 .contact-parent {
   display: flex;
-  margin: 80px 0; }
+  padding-bottom: 20px;
+  padding-top: 20px; }
   .contact-parent .contact-child {
     display: flex;
     flex: 1;
@@ -226,6 +228,26 @@ header {
       text-align: center;
       font-size: 16px;
       color: #023047; }
+    .contact-parent .contact-child .inside-contact input, .contact-parent .contact-child .inside-contact textarea {
+      width: 100%;
+      background-color: #eee;
+      border: 1px solid rgba(0, 0, 0, 0.48);
+      padding: 5px 10px;
+      margin-bottom: 20px; }
+      .contact-parent .contact-child .inside-contact input:hover, .contact-parent .contact-child .inside-contact textarea:hover {
+        background-color: #fff;
+        color: #000;
+        transition: 0.2s; }
+    .contact-parent .contact-child .inside-contact input[type=submit] {
+      background-color: #023047;
+      color: #fff;
+      transition: 0.2s;
+      border: 2px solid #000;
+      margin: 30px 0; }
+      .contact-parent .contact-child .inside-contact input[type=submit]:hover {
+        background-color: #fff;
+        color: #000;
+        transition: 0.2s; }
   .contact-parent .child1 {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
     background-size: cover;
@@ -245,28 +267,6 @@ header {
     flex-direction: column;
     justify-content: space-around;
     align-items: center; }
-
-.inside-contact input, .inside-contact textarea {
-  width: 100%;
-  background-color: #eee;
-  border: 1px solid rgba(0, 0, 0, 0.48);
-  padding: 5px 10px;
-  margin-bottom: 20px; }
-  .inside-contact input:hover, .inside-contact textarea:hover {
-    background-color: #fff;
-    color: #000;
-    transition: 0.2s; }
-
-.inside-contact input[type=submit] {
-  background-color: #023047;
-  color: #fff;
-  transition: 0.2s;
-  border: 2px solid #000;
-  margin: 30px 0; }
-  .inside-contact input[type=submit]:hover {
-    background-color: #fff;
-    color: #000;
-    transition: 0.2s; }
 
 /* fin contacto */
 /* conocenos */
@@ -326,7 +326,40 @@ footer {
       padding: 40px; }
       footer .container-footer .box-footer li {
         text-decoration: none; }
+      footer .container-footer .box-footer a {
+        margin-top: 10px;
+        color: black;
+        font-weight: 600;
+        text-decoration: none; }
+        footer .container-footer .box-footer a:hover {
+          opacity: 0.9; }
+        footer .container-footer .box-footer a .fab {
+          font-size: 20px; }
+      footer .container-footer .box-footer h2 {
+        margin-bottom: 30px;
+        color: black;
+        font-weight: 700; }
+      footer .container-footer .box-footer .terminos {
+        max-width: 350px;
+        margin-top: 20px;
+        font-weight: 500;
+        color: black;
+        font-size: 12px; }
+        footer .container-footer .box-footer .terminos p {
+          text-align: center;
+          justify-content: center; }
+      footer .container-footer .box-footer .logo {
+        display: flex;
+        justify-content: center; }
+        footer .container-footer .box-footer .logo img {
+          padding-top: 20px;
+          width: 200px;
+          align-content: center; }
+      footer .container-footer .box-footer .fab {
+        padding: 5px; }
     footer .container-footer .box-copyright {
+      justify-content: center;
+      align-content: center;
       max-width: 1200px;
       margin: auto;
       text-align: center;
@@ -338,35 +371,6 @@ footer {
         border: none;
         height: 1px;
         color: black; }
-    footer .container-footer a {
-      margin-top: 10px;
-      color: black;
-      font-weight: 600;
-      text-decoration: none; }
-      footer .container-footer a:hover {
-        opacity: 0.9; }
-      footer .container-footer a .fab {
-        font-size: 20px; }
-    footer .container-footer h2 {
-      margin-bottom: 30px;
-      color: black;
-      font-weight: 700; }
-    footer .container-footer .terminos {
-      max-width: 350px;
-      margin-top: 20px;
-      font-weight: 500;
-      color: black;
-      font-size: 12px; }
-      footer .container-footer .terminos p {
-        text-align: center;
-        justify-content: center; }
-    footer .container-footer .logo {
-      display: flex;
-      justify-content: center; }
-      footer .container-footer .logo img {
-        padding-top: 20px;
-        width: 200px;
-        align-content: center; }
 
 /* fin footer */
 .cartas {
@@ -384,6 +388,7 @@ footer {
       height: 100%;
       object-fit: cover; }
 
+/* propiedad */
 .galeria-propiedad {
   display: grid;
   justify-content: center;
@@ -391,9 +396,12 @@ footer {
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-auto-rows: auto;
   padding: 2px;
-  gap: 5px; }
+  gap: 5px;
+  margin: 15px;
+  padding-bottom: 20px; }
   .galeria-propiedad .gallery-propiedad {
     display: flex;
+    flex-direction: row;
     justify-items: center;
     position: relative;
     overflow: hidden;
@@ -408,11 +416,15 @@ footer {
     border-radius: 40px 50px;
     width: 100%;
     height: 100%;
-    display: inline-block; }
+    display: inline-block;
+    margin: 5px;
+    padding: 15px; }
+    .galeria-propiedad .gallery-propiedad iframe {
+      border-radius: 15px; }
   .galeria-propiedad .descripcion {
     align-self: center; }
 
-/* responsive */
+/* responsive- mediaquery */
 @media only screen and (max-width: 768px) {
   .cuadrados {
     flex-direction: column; }
@@ -452,7 +464,15 @@ footer {
   .gallery-item {
     position: inherit; }
     .gallery-item .gallery-title {
-      position: sticky; } }
+      position: sticky; }
+  .galeria-propiedad {
+    margin: 0 auto;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-auto-rows: auto;
+    padding: 2px;
+    gap: 5px;
+    margin: 15px;
+    padding-bottom: 20px; } }
 
 @media screen and (max-width: 991px) {
   .contact-parent {
