--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,7 +1,8 @@
 /* contacto */
 .contact-parent{
     display:flex;
-    margin:80px 0;
+    padding-bottom: 20px;
+    padding-top: 20px;
     .contact-child{
         display:flex;
         flex:1;
@@ -19,6 +20,30 @@
             text-align:center;
             font-size:16px;
             color:$bg_nav;
+        }
+        .inside-contact input, .inside-contact textarea{
+            width:100%;
+            background-color:#eee;
+            border:1px solid rgba(0,0,0,0.48);
+            padding:5px 10px;
+            margin-bottom:20px;
+            &:hover{
+                background-color:#fff;
+                color:#000;
+                transition:0.2s;
+            }
+        }
+        .inside-contact input[type=submit]{
+            background-color:$bg_nav;
+            color:#fff;
+            transition:0.2s;
+            border:2px solid #000;
+            margin:30px 0;
+            &:hover{
+                background-color:#fff;
+                color:#000;
+                transition:0.2s;
+            }
         }
     }
     .child1{
@@ -46,30 +71,5 @@
     }
 }
 
-.inside-contact input, .inside-contact textarea{
-    width:100%;
-    background-color:#eee;
-    border:1px solid rgba(0,0,0,0.48);
-    padding:5px 10px;
-    margin-bottom:20px;
-    &:hover{
-        background-color:#fff;
-        color:#000;
-        transition:0.2s;
-    }
-}
-
-.inside-contact input[type=submit]{
-    background-color:$bg_nav;
-    color:#fff;
-    transition:0.2s;
-    border:2px solid #000;
-    margin:30px 0;
-    &:hover{
-        background-color:#fff;
-        color:#000;
-        transition:0.2s;
-    }
-}
 
 /* fin contacto */
