--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -80,6 +80,17 @@
             position: sticky;
         }
     }
+
+    .galeria-propiedad {
+        margin: 0 auto;
+        grid-template-columns: repeat(auto-fill, minmax(min(20rem), 1fr));
+        grid-auto-rows: auto;
+        padding: 2px;
+        gap: 5px;
+        margin: 15px;
+        padding-bottom: 20px;
+    }
+
 }
 
 @media screen and (max-width:991px) {
