--- a/css/estilos.css
+++ b/css/estilos.css
@@ -408,8 +408,8 @@ footer {
     transition: all 500ms ease;
     border-radius: 5px;
     box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.5);
-    background-color: #fee2f8;
-    background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
+    background-color: #6a93cb;
+    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
     line-height: 1.6;
     border: black;
     border-style: solid;
