--- a/scss/_propiedad.scss
+++ b/scss/_propiedad.scss
@@ -1,7 +1,7 @@
 /* propiedad */
 @mixin cuadrados {
-    background-color: #fee2f8;
-    background-image: linear-gradient(315deg, #fee2f8 0%, #dcf8ef 74%);
+    background-color: #6a93cb;
+    background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
     line-height: 1.6;
     border: black;
     border-style: solid;
@@ -12,6 +12,7 @@
     margin: 5px;
     padding: 15px;
 }
+
 .galeria-propiedad {
     display: grid;
     justify-content: center;
@@ -22,6 +23,7 @@
     gap: 5px;
     margin: 15px;
     padding-bottom: 20px;
+
     .gallery-propiedad {
         display: flex;
         flex-direction: row;
@@ -30,13 +32,16 @@
         overflow: hidden;
         transition: all 500ms ease;
         border-radius: 5px;
-        box-shadow: 1px 10px 15px rgba(0,0,0,0.50);
-        iframe{
+        box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.50);
+
+        iframe {
             border-radius: 15px;
         }
-        @include cuadrados;}
-        .descripcion{
-            align-self: center;
-        }
-}
 
+        @include cuadrados;
+    }
+
+    .descripcion {
+        align-self: center;
+    }
+}
