--- a/scss/_bodygeneral.scss
+++ b/scss/_bodygeneral.scss
@@ -44,7 +44,7 @@ body {
         text-align: center;
         font-size: 35px;
         padding: 15px;
-        border-radius: 40px 100px;
+        border-radius: 0px 0px 20px 20px;
     }
 
     .titulo-h2 {
@@ -70,6 +70,9 @@ body {
                 @include cuadrados;
 
             }
+        }
+        .background{
+            background-color: white;
         }
     }
     
