--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,75 +1,88 @@
 /* contacto */
-.contact-parent{
-    display:flex;
+.contact-parent {
+    display: flex;
     padding-bottom: 20px;
     padding-top: 20px;
-    .contact-child{
-        display:flex;
-        flex:1;
-        box-shadow:0px 0px 10px -2px rgba(0,0,0,0.75);
-        .inside-contact{
-            width:90%;
-            margin:0 auto;
+
+    .contact-child {
+        display: flex;
+        flex: 1;
+        box-shadow: 0px 0px 10px -2px rgba(0, 0, 0, 0.75);
+
+        .inside-contact {
+            width: 90%;
+            margin: 0 auto;
         }
-        .inside-contact h2{
-            text-transform:uppercase;
-            text-align:center;
-            margin-top:50px;
+
+        .inside-contact h2 {
+            text-transform: uppercase;
+            text-align: center;
+            margin-top: 50px;
         }
-        .inside-contact h3{
-            text-align:center;
-            font-size:16px;
-            color:$bg_nav;
+
+        .inside-contact h3 {
+            text-align: center;
+            font-size: 16px;
+            color: $bg_nav;
         }
-        .inside-contact input, .inside-contact textarea{
-            width:100%;
-            background-color:#eee;
-            border:1px solid rgba(0,0,0,0.48);
-            padding:5px 10px;
-            margin-bottom:20px;
-            &:hover{
-                background-color:#fff;
-                color:#000;
-                transition:0.2s;
+
+        .inside-contact input,
+        .inside-contact textarea {
+            width: 100%;
+            background-color: #eee;
+            border: 1px solid rgba(0, 0, 0, 0.48);
+            padding: 5px 10px;
+            margin-bottom: 20px;
+
+            &:hover {
+                background-color: #fff;
+                color: #000;
+                transition: 0.2s;
             }
         }
-        .inside-contact input[type=submit]{
-            background-color:$bg_nav;
-            color:#fff;
-            transition:0.2s;
-            border:2px solid #000;
-            margin:30px 0;
-            &:hover{
-                background-color:#fff;
-                color:#000;
-                transition:0.2s;
-            }
-        }
-    }
-    .child1{
-        background:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
-        background-size:cover;
-        display:flex;
-        flex-direction:column;
-        justify-content:space-around;
-        color:#fff;
-        padding:100px 0;
-        p{
-            padding-left:20%;
-            font-size:20px;
-            text-shadow:0px 0px 2px #000;
-            span{
-                font-size:16px;
-                color:#9df2fd;
+
+        .inside-contact input[type=submit] {
+            background-color: $bg_nav;
+            color: #fff;
+            transition: 0.2s;
+            border: 2px solid #000;
+            margin: 30px 0;
+
+            &:hover {
+                background-color: #fff;
+                color: #000;
+                transition: 0.2s;
             }
         }
     }
-    .child2{
-        flex-direction:column;
-        justify-content:space-around;
-        align-items:center;
+
+    .child1 {
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        color: #fff;
+        padding: 100px 0;
+
+        p {
+            padding-left: 20%;
+            font-size: 20px;
+            text-shadow: 0px 0px 2px #000;
+
+            span {
+                font-size: 16px;
+                color: #9df2fd;
+            }
+        }
+    }
+
+    .child2 {
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        background-color: $bg_body;
     }
 }
-
 
 /* fin contacto */
